--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,17 @@
 <resources>
     <string name="app_name">Cartoon Shards</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="cartoon_shards">Cartoon Shards</string>
     <string name="play">Play</string>
     <string name="time_left">Time left: %1$s</string>
     <string name="your_score_text">Your Score:</string>
     <string name="high_score">High Score:</string>
     <string name="play_again">Play Again</string>
+
+    <string name="tom_and_jerry">Tom and Jerry</string>
+    <string name="lilo_and_stitch">Lilo and Stitch</string>
+    <string name="lion_king">Lion King</string>
+    <string name="finding_nemo">Finding Nemo</string>
+    <string name="ladybug_and_cat_noir">Ladybug &amp; Cat Noir</string>
+    <string name="frozen">Frozen</string>
+
 </resources>
