Small layout buttons fixed

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -4,7 +4,7 @@
     <string name="cartoon_shards">Cartoon Shards</string>
     <string name="play">Играть</string>
     <string name="time_left">Время: %1$s</string>
-    <string name="your_score_text">Твой счёт:</string>
+    <string name="your_score_text">Счёт: %d</string>
     <string name="high_score">Лучший счёт:</string>
     <string name="play_again">Ещё раз</string>
 
