--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,8 @@
     <string name="high_score">High Score: %d</string>
     <string name="play_again">Play Again</string>
     <string name="shared_pref_name" translatable="false">"finish_fragment_info"</string>
+    <string name="score_delta" translatable="false">%s %d</string>
+    <string name="time_delta" translatable="false">%s 0:0%d</string>
 
     <string name="lion_king">Lion King</string>
     <string name="ladybug_and_cat_noir">Ladybug &amp; Cat Noir</string>
