--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -16,7 +16,7 @@
     <string name="frozen">Холодное сердце</string>
     <string name="wall_e">ВАЛЛ-И</string>
     <string name="puss_in_boots">Кот в сапогах</string>
-    <string name="tangled">Рапунцель: Запутанная история</string>
+    <string name="tangled">Рапунцель</string>
     <string name="ainbo">Айнбо. Сердце Амазонии</string>
     <string name="luca">Лука</string>
     <string name="vivo">Виво</string>
