--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -25,7 +25,37 @@
     <string name="cars">Тачки</string>
     <string name="hotel_transylvania">Монстры на каникулах</string>
     <string name="shrek">Шрек</string>
-    <string name="monsers_inc">Корпорация Монстров</string>
+    <string name="monsters_inc">Корпорация Монстров</string>
     <string name="how_to_train_your_dragon">Как приручить дракона</string>
     <string name="kung_fu_panda">Кунг-фу Панда</string>
+    <string name="monsters_university">Университет монстров</string>
+    <string name="ratatouille">Рататуй</string>
+    <string name="rio">Рио</string>
+    <string name="rise_guardians">Хранители снов</string>
+    <string name="brave">Храбрая сердцем</string>
+    <string name="wreck_it_ralph">Ральф</string>
+    <string name="ice_age">Ледниковый период</string>
+    <string name="up">Вверх</string>
+    <string name="the_incredibles">Суперсемейка</string>
+    <string name="the_smurfs">Смурфики</string>
+    <string name="zootopia">Зверополис</string>
+    <string name="shark_tale">Подводная братва</string>
+    <string name="bolt">Вольт</string>
+    <string name="madagascar">Мадагаскар</string>
+    <string name="hercules">Геркулес</string>
+    <string name="moana">Моана</string>
+    <string name="minions">Миньоны</string>
+    <string name="beauty_beast">Красавица и чудовище</string>
+    <string name="boss_baby">Босс-молокосос</string>
+    <string name="jungle_book">Книга Джунглей</string>
+    <string name="toy_story">История игрушек</string>
+    <string name="alvin_chipmunks">Элвин и бурундуки</string>
+    <string name="planes">Самолеты</string>
+    <string name="aladdin">Аладдин</string>
+    <string name="balto">Балто</string>
+    <string name="little_mermaid">Русалочка</string>
+    <string name="over_the_hedge">Лесная братва</string>
+    <string name="cinderella">Золушка</string>
+    <string name="angry_birds">Angry Birds в кино</string>
+
 </resources>
