--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,8 +28,37 @@
     <string name="cars">Cars</string>
     <string name="hotel_transylvania">Hotel Transylvania</string>
     <string name="shrek">Shrek</string>
-    <string name="monsers_inc">Monsters, Inc.</string>
+    <string name="monsters_inc">Monsters, Inc.</string>
     <string name="how_to_train_your_dragon">How to Train Your Dragon</string>
     <string name="kung_fu_panda">Kung Fu Panda</string>
+    <string name="monsters_university">Monsters University</string>
+    <string name="ratatouille">Ratatouille</string>
+    <string name="rio">Rio</string>
+    <string name="rise_guardians">Rise of the Guardians</string>
+    <string name="brave">Brave</string>
+    <string name="wreck_it_ralph">Wreck-It Ralph</string>
+    <string name="ice_age">Ice Age</string>
+    <string name="up">Up</string>
+    <string name="the_incredibles">The Incredibles</string>
+    <string name="the_smurfs">The Smurfs</string>
+    <string name="zootopia">Zootopia</string>
+    <string name="shark_tale">Shark Tale</string>
+    <string name="bolt">Bolt</string>
+    <string name="madagascar">Madagascar</string>
+    <string name="hercules">Hercules</string>
+    <string name="moana">Moana</string>
+    <string name="minions">Minions</string>
+    <string name="beauty_beast">Beauty and the Beast</string>
+    <string name="boss_baby">The Boss Baby</string>
+    <string name="jungle_book">The Jungle Book</string>
+    <string name="toy_story">Toy Story</string>
+    <string name="alvin_chipmunks">Alvin and the Chipmunks</string>
+    <string name="planes">Planes</string>
+    <string name="aladdin">Aladdin</string>
+    <string name="balto">Balto</string>
+    <string name="little_mermaid">The Little Mermaid</string>
+    <string name="over_the_hedge">Over the Hedge</string>
+    <string name="cinderella">Cinderella</string>
+    <string name="angry_birds">Angry Birds</string>
 
 </resources>
