Fixes before publishing

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Угадай мультик</string>
-    <string name="cartoon_shards">Cartoon Shards</string>
     <string name="play">Играть</string>
     <string name="time_left">Время %1$s</string>
     <string name="your_score_text">Счёт: %d</string>
     <string name="high_score">Лучший счёт: %d</string>
     <string name="play_again">Ещё раз</string>
+    <string name="finish">Конец</string>
+    <string name="welcome">Добро пожаловать</string>
 
     <string name="tom_and_jerry">Том и Джерри</string>
     <string name="lilo_and_stitch">Лило и Стич</string>
