--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Cartoon Shards</string>
-    <string name="cartoon_shards">Cartoon Shards</string>
+
     <string name="play">Play</string>
     <string name="time_left">Time %1$s</string>
     <string name="your_score_text">Score: %d</string>
@@ -9,6 +9,8 @@
     <string name="shared_pref_name" translatable="false">"finish_fragment_info"</string>
     <string name="score_delta" translatable="false">%s %d</string>
     <string name="time_delta" translatable="false">%s 0:0%d</string>
+    <string name="finish">Finish</string>
+    <string name="welcome">Welcome</string>
 
     <string name="lion_king">Lion King</string>
     <string name="ladybug_and_cat_noir">Ladybug &amp; Cat Noir</string>
@@ -92,5 +94,6 @@
     <string name="croods">The Croods</string>
     <string name="smallfoot">Smallfoot</string>
     <string name="ferdinand">Ferdinand</string>
+
 
 </resources>
