data and model packages created

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -72,7 +72,7 @@
     <string name="good_dinosaur">Хороший динозавр</string>
     <string name="scooby_doo">Скуби-Ду</string>
     <string name="batman">Бэтмен</string>
-    <string name="raya">Райя и последний дракон</string>
+    <string name="raya">Райя и дракон</string>
     <string name="coco">Тайна Коко</string>
     <string name="chip_dale">Чип и Дэйл</string>
     <string name="peppa_pig">Свинка Пеппа</string>
