--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -90,5 +90,22 @@
     <string name="croods">Семейка Крудс</string>
     <string name="smallfoot">Смолфут</string>
     <string name="ferdinand">Фердинанд</string>
+    <string name="spirit_untamed">Спирит Непокорный</string>
+    <string name="nine">Девять</string>
+    <string name="rango">Ранго</string>
+    <string name="princess_and_frog">Принцесса и Лягушка</string>
+    <string name="zambezia">Замбезия</string>
+    <string name="planet_51">Планета 51</string>
+    <string name="pocahontas">Покахонтас</string>
+    <string name="mulan">Мулан</string>
+    <string name="horton_hears">Хортон</string>
+    <string name="big_hero_6">Город героев</string>
+    <string name="kikoriki">Смешарики</string>
+    <string name="hey_arnold">Эй, Арнольд!</string>
+    <string name="steven_universe">Вселенная Стивена</string>
+    <string name="pj_masks">Герои в масках</string>
+    <string name="kim_possible">Ким Пять-с-плюсом</string>
+    <string name="sonic_boom">Соник Бум</string>
+    <string name="bambi">Бэмби</string>
 
 </resources>
