--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -107,5 +107,9 @@
     <string name="kim_possible">Ким Пять-с-плюсом</string>
     <string name="sonic_boom">Соник Бум</string>
     <string name="bambi">Бэмби</string>
+    <string name="naruto">Наруто</string>
+    <string name="alchemist">Стальной алхимик</string>
+    <string name="pokemon">Покемон</string>
+
 
 </resources>
