--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -111,5 +111,8 @@
     <string name="kim_possible">Kim Possible</string>
     <string name="sonic_boom">Sonic Boom</string>
     <string name="bambi">Bambi</string>
+    <string name="naruto">Naruto</string>
+    <string name="alchemist">Fullmetal Alchemist</string>
+    <string name="pokemon">Pokemon</string>
 
 </resources>
